--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.6",
+    "await-to-js": "^3.0.0",
     "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
@@ -40,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.48.0",
+    "prettier": "^2.8.8"
   }
 }
